@@ -1,3 +1,8 @@
+
+# 0,1,0,20201221
+	Additional Primitives are create from search box (Search for 'Create' then choose the type).
+	Additional Primitives are create from python Script (https://github.com/NevilArt/BsMax_2_80/wiki/bpy.ops.object.create).
+
 # 0,1,0,20201216
 	Create empty frame for using as joysticks border added for 'Joystic Creator'.
 	'Ctrl + RMB' Select extended in max mode works better now.
